syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "DuplexStreaming";

package notify;

service Notifier {
	rpc ChatNotification(stream NotificationRequest) returns (stream NotificationReply);
}

message NotificationRequest {
  string message = 1;
};


message NotificationReply {
	string message = 1;
	google.protobuf.Timestamp receivedAt = 3;
}